--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ stages:
     - task: Docker@2
       inputs:
         containerRegistry: 'Docker Hub'
-        repository: 'subweb'
+        repository: 'rokeyyan/subweb'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
         tags: |
