--- a/.env
+++ b/.env
@@ -26,3 +26,6 @@ VUE_APP_MYURLS_DEFAULT_BACKEND = "https://v1.mk"
 
 # 文本托管后端
 VUE_APP_CONFIG_UPLOAD_BACKEND = "https://clashapi.rokeyyan.com"
+
+#shlink 短链服务APIkey
+VUE_APP_SHLINK_APIKEY = "e23dcd0a-f8f7-4910-9f72-ae467c75e738"
